# alloy

./: .gitignore  Cargo.toml  Makefile  README.md  STRUCTURE.md  build.rs  rust-toolchain
bootcore/: Cargo.toml  build.rs
bootcore/layouts/: x86.ld
bootcore/src/: lib.rs  panic.rs  x86.rs
bootcore/src/x86/: boot.s  gdt.rs  gdt.s  ports.rs  serial.rs  start.rs
bootcore/src/x86/start/: protocols.rs
bootcore/src/x86/start/protocols/: multiboot2.rs
bootcore/src/x86/start/protocols/multiboot2/: area.rs
gdt/: Cargo.toml
gdt/src/: lib.rs  x86.rs
layouts/: x86.ld
memory/: Cargo.toml
memory/src/: lib.rs  utils.rs
memory/src/x86/paging/: phys.rs  virt.rs
mk/: bootcore.mk  config.mk  grub.mk  limine.mk  qemu.mk
res/grub/: grub.cfg
res/limine/: limine.cfg
src/: main.rs
triplets/: i386-unknown-none.json
