[package]
name = "alloy"
version = "0.1.0"
description = "The alloy kernel"
authors = ["jorun <contact@jorun.dev>"]
edition = "2021"

[workspace]
members = [
	"bootcore",
	"memory",
]

[features]
x86 = []
i386 = ["x86", "memory/i386"]

[dependencies]
memory = { path = "memory" }
bootcore = { path = "bootcore", features = ["multiboot2", "i386"]}
